--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
     display: flex;
     align-items: center;
     padding: .5rem 3.75rem;
-    background-color: orange;
+    background-color: #FF8000;
   }
   
   header .logo-small {
@@ -93,6 +93,7 @@ html {
   }
   
   #banner:before { /* Orange Overlay */
+    background-color: rgba(255, 128, 0, 0.75);
     position: absolute;
     content: "";
     top: 0;
@@ -111,6 +112,7 @@ html {
     padding-bottom: 1.25rem;
     font-family: "Creepster", cursive;
     font-size: 8rem;
+    color: rgba(0, 0, 0, 0.7);
   
   }
   
@@ -151,7 +153,7 @@ html {
     margin-bottom: 2.4375rem;
     line-height: 1;
     font-size: 2rem;
-    color: orange;
+    color: #FF8000;
   }
   
   #color-guide .color {
@@ -186,7 +188,7 @@ html {
     margin-bottom: 1.25rem;
     font-size: 1.125rem;
     font-weight: bold;
-  
+    color: #9B9B9B
   }
   
   .color .swatch {
@@ -237,12 +239,12 @@ html {
   /* Red Swatches */
   
   .reds .base-color {
-    color: #ff002b;
+    color: hsl(350, 100%, 50%);
   }
   
   /* Red lightness decreases by 15 */
   .reds .lightness .color-1 {
-  
+    background-color: hsl(350, 100%, 80%);
   }
   
   .reds .lightness .color-2 {
@@ -263,7 +265,7 @@ html {
   
   /* Red saturation decreases by 15 */
   .reds .saturation .color-1 {
-  
+    background-color: hsl(350, 100%, 50%);
   }
   
   .reds .saturation .color-2 {
@@ -284,7 +286,7 @@ html {
   
   /* Red hue increases by 15 */
   .reds .hue .color-1 {
-  
+    background-color: hsl(320, 100%, 50%);
   }
   
   .reds .hue .color-2 {
@@ -306,12 +308,12 @@ html {
   /* Green Swatches */
   
   .greens .base-color {
-    color: #00ff2a;
+    color: hsl(130, 100%, 50%);
   }
   
   /* Green lightness decreases by 20 */
   .greens .lightness .color-1 {
-  
+    background-color: hsl(103, 100%, 100%);
   }
   
   .greens .lightness .color-2 {
@@ -332,7 +334,7 @@ html {
   
   /* Green saturation decreases by 20 */
   .greens .saturation .color-1 {
-  
+    background-color: hsl(130, 100%, 50%);
   }
   
   .greens .saturation .color-2 {
@@ -353,7 +355,7 @@ html {
   
   /* Green hue increases by 22 */
   .greens .hue .color-1 {
-  
+    background-color: hsl(86, 100%, 50%);
   }
   
   .greens .hue .color-2 {
@@ -375,12 +377,12 @@ html {
   /* Blue Swatches */
   
   .blues .base-color {
-    color: #0055ff;
+    color: hsl(220, 100%, 50%);
   }
   
   /* Blue lightness decreases by 20 */
   .blues .lightness .color-1 {
-  
+    background-color: hsl(220, 100%, 90%);
   }
   
   .blues .lightness .color-2 {
@@ -401,7 +403,7 @@ html {
   
   /* Blue saturation decreases by 20 */
   .blues .saturation .color-1 {
-  
+    background-color: hsl(220, 100%, 50%);
   }
   
   .blues .saturation .color-2 {
@@ -422,7 +424,7 @@ html {
   
   /* Blue hue decreases by 20 */
   .blues .hue .color-1 {
-  
+    background-color: hsl(260, 100%, 50%);
   }
   
   .blues .hue .color-2 {
@@ -462,7 +464,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-  
+    background-color: rgba(255, 128, 0, 0.75)
   }
   
   footer * {
@@ -482,7 +484,7 @@ html {
   footer .button {
     padding: 1.25rem 3.75rem;
     border-radius: 4px;
-    background-color: orange;
+    background-color: #FF8000;
   }
   
   @media only screen and (max-width: 560px) {
